--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <a href="/"> Home </a>
           </li>
           <li>
-            <a href="https://github.com/DoniLite/DoniLite/blob/main/README.md"> About Me </a>
+            <a href="https://github.com/DoniLite/DoniLite/blob/main/README.md">
+              About Me
+            </a>
           </li>
           <li>
-            <a href=""> Contact </a>
+            <a href="#contact"> Contact </a>
           </li>
         </ul>
       </div>
@@ -56,10 +58,41 @@
       au maximum et bonnes lecture...
     </p>
     <h2 class="push for-article">Articles disponibles</h2>
-    <div class="push full">
-      <ul id="article" class="article-list">
-      </ul>
+    <div class="push full id-art">
+      <ul id="article" class="article-list"></ul>
     </div>
+    <footer id="contact">
+      <div class="flex-footer">
+        <a href="">
+          <img
+            src="./assets//svgs//facebook.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
+        </a>
+        <a href="">
+          <img
+            src="./assets//svgs//linkedin.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img
+            src="./assets//svgs//x-twitter.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
+        </a>
+      </div>
+      <span class="push">Copyright @DoniLite 2024</span>
+    </footer>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
