--- a/page.html
+++ b/page.html
@@ -17,10 +17,12 @@
             <a href="/"> Home </a>
           </li>
           <li>
-            <a href="https://github.com/DoniLite/DoniLite/blob/main/README.md"> About Me </a>
+            <a href="https://github.com/DoniLite/DoniLite/blob/main/README.md">
+              About Me
+            </a>
           </li>
           <li>
-            <a href=""> Contact </a>
+            <a href="#contact"> Contact </a>
           </li>
         </ul>
       </div>
@@ -46,6 +48,41 @@
         </div>
       </div>
     </header>
+
+    <div class="markdown-content" id="parsedContent"></div>
+
+    <footer id="contact">
+      <div class="flex-footer">
+        <a href="">
+          <img
+            src="./assets//svgs//facebook.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
+        </a>
+        <a href="">
+          <img
+            src="./assets//svgs//linkedin.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img
+            src="./assets//svgs//x-twitter.svg"
+            class="menu-iconn"
+            alt="icon"
+          />
+        </a>
+        <a href="">
+          <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
+        </a>
+      </div>
+      <span class="push">Copyright @DoniLite 2024</span>
+    </footer>
 
     <script type="module" src="./page.js"></script>
   </body>
