--- a/page.html
+++ b/page.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://ghostify.site/api/v1/md.css">
     <link rel="stylesheet" href="style.css" />
     <title>Doni Lite | My Story Book</title>
   </head>
@@ -49,7 +50,10 @@
       </div>
     </header>
 
-    <div class="markdown-content" id="parsedContent"></div>
+    <div class="id-art">
+      <div class="markdown-content" id="parsedContent"></div>
+    </div>
+    
 
     <footer id="contact">
       <div class="flex-footer">
@@ -85,5 +89,6 @@
     </footer>
 
     <script type="module" src="./page.js"></script>
+    <script type="module" src="https://ghostify.site/api/v1/md.js"></script>
   </body>
 </html>
