--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/svg+xml" href="./logo.png" />
     <title>Doni Lite | My Story Book</title>
   </head>
   <body>
@@ -63,7 +64,7 @@
     </div>
     <footer id="contact">
       <div class="flex-footer">
-        <a href="">
+        <a href="https://web.facebook.com/doni.lite.3/">
           <img
             src="./assets//svgs//facebook.svg"
             class="menu-iconn"
@@ -73,21 +74,21 @@
         <a href="">
           <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
         </a>
-        <a href="">
+        <a href="https://www.linkedin.com/in/yao-messan-nogb%C3%A9dzi-3b3696239/">
           <img
             src="./assets//svgs//linkedin.svg"
             class="menu-iconn"
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://x.com/ghost_spyco">
           <img
             src="./assets//svgs//x-twitter.svg"
             class="menu-iconn"
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://t.me/DoniGhost">
           <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
         </a>
       </div>
