--- a/page.html
+++ b/page.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://ghostify.site/api/v1/md.css">
+    <link rel="icon" type="image/svg+xml" href="./logo.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/DoniLite/CSS/md.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Doni Lite | My Story Book</title>
   </head>
   <body>
     <div class="navigation" id="navContainer">
@@ -51,13 +54,14 @@
     </header>
 
     <div class="id-art">
-      <div class="markdown-content" id="parsedContent"></div>
+      <div class="markdown-content light-mode">
+        <div class="markdown-content" id="parsedContent"></div>
+      </div>
     </div>
-    
 
     <footer id="contact">
       <div class="flex-footer">
-        <a href="">
+        <a href="https://web.facebook.com/doni.lite.3/">
           <img
             src="./assets//svgs//facebook.svg"
             class="menu-iconn"
@@ -67,21 +71,23 @@
         <a href="">
           <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
         </a>
-        <a href="">
+        <a
+          href="https://www.linkedin.com/in/yao-messan-nogb%C3%A9dzi-3b3696239/"
+        >
           <img
             src="./assets//svgs//linkedin.svg"
             class="menu-iconn"
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://x.com/ghost_spyco">
           <img
             src="./assets//svgs//x-twitter.svg"
             class="menu-iconn"
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://t.me/DoniGhost">
           <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
         </a>
       </div>
@@ -89,6 +95,9 @@
     </footer>
 
     <script type="module" src="./page.js"></script>
-    <script type="module" src="https://ghostify.site/api/v1/md.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/gh/DoniLite/CSS/md.js"
+    ></script>
   </body>
 </html>
