--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/DoniLite/CSS/md.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="navigation" id="navContainer">
@@ -18,7 +18,7 @@
         </div>
         <ul id="navList">
           <li>
-            <a href="/"> Home </a>
+            <a href="./index.html"> Home </a>
           </li>
           <li>
             <a href="https://github.com/DoniLite/DoniLite/blob/main/README.md">
@@ -91,9 +91,8 @@
           <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
         </a>
       </div>
-      <span class="push">Copyright @DoniLite 2024</span>
+      <span class="push">Copyright <a href="https://github.com/DoniLite">@DoniLite</a> 2024</span>
     </footer>
-
     <script type="module" src="./page.js"></script>
     <script
       type="module"
