--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img src="./assets/svgs/telegram.svg" class="menu-iconn" alt="icon" />
         </a>
       </div>
-      <span class="push">Copyright @DoniLite 2024</span>
+      <span class="push">Copyright <a href="https://github.com/DoniLite">@DoniLite</a> 2024</span>
     </footer>
     <script type="module" src="./app.js"></script>
   </body>
