--- a/page.html
+++ b/page.html
@@ -6,8 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="./logo.png" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/DoniLite/CSS/md.css"
+      href="https://cdn.jsdelivr.net/gh/DoniLite/CSS@1.1.0/md.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -96,7 +97,7 @@
     <script type="module" src="./page.js"></script>
     <script
       type="module"
-      src="https://cdn.jsdelivr.net/gh/DoniLite/CSS/md.js"
+      src="https://cdn.jsdelivr.net/gh/DoniLite/CSS@1.1.0/md.js"
     ></script>
   </body>
 </html>
