adding github link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <div class="header-content">
         <div class="header-icon">
-          <a href="#">
+          <a href="https://github.com/DoniLite">
             <img
               src="./assets//svgs/github.svg"
               class="github-icon"
@@ -71,7 +71,7 @@
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://github.com/DoniLite">
           <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
         </a>
         <a href="https://www.linkedin.com/in/yao-messan-nogb%C3%A9dzi-3b3696239/">
