--- a/page.html
+++ b/page.html
@@ -35,7 +35,7 @@
     <header>
       <div class="header-content">
         <div class="header-icon">
-          <a href="#">
+          <a href="https://github.com/DoniLite">
             <img
               src="./assets//svgs/github.svg"
               class="github-icon"
@@ -69,7 +69,7 @@
             alt="icon"
           />
         </a>
-        <a href="">
+        <a href="https://github.com/DoniLite">
           <img src="./assets/svgs/github.svg" class="menu-iconn" alt="icon" />
         </a>
         <a
